--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "^3.0.2",
+    "axios": "^0.17.1",
     "babel-preset-react": "^6.24.1",
     "perfect-scrollbar": "^1.1.0",
     "prop-types": "^15.6.0",
